python-service/template/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service
  labels:
    app: python-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
      - name: python-service
        image: doclosjs/python-flask-service:v2
        ports:
        - containerPort: 5000
