python-service/template/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
# This label has to match the one in the deploy.yaml file
# under spec: selector: matchLabels
  selector:
    app: python-service
  ports:
    - protocol: TCP
      # This is the port forwarded port - the service will be available on this port
      # port: 8080
      port: 80
      # This refers to the containerPort inthe deployment.yaml file
      targetPort: 5000
