python-service/template/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-service
spec:
  rules:
  - host: python-service.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-service
            # THis is the port of the service found in the service.yaml file
            port:
              number: 80
              # number: 8080
